# ghfetch

./: Cargo.toml  README.md
.github/workflows/: aur-git.yml  ci.yml  release.yml
packaging/aur/ghfetch-rs-bin/: PKGBUILD.in
packaging/aur/ghfetch-rs-git/: PKGBUILD.in
scripts/: build-release-archive.sh  compute-git-pkgver.sh  publish-aur.sh  render-aur-package.sh
src/: cli.rs  config.rs  lang_colors.rs  main.rs
src/api/: client.rs  graphql.rs  mod.rs  rest.rs  types.rs
src/data/: breakdown.rs  contributions.rs  languages.rs  mod.rs  org.rs  repo.rs  stats.rs  user.rs
src/display/: breakdown.rs  language_bar.rs  mod.rs  org.rs  repo.rs  streak.rs  theme.rs  user.rs
