[package]
name = "ghfetch"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "GitHub stats in the terminal, neofetch-style"
readme = "README.md"
license = "MIT"
repository = "https://github.com/OneNoted/ghfetch"
homepage = "https://github.com/OneNoted/ghfetch"
documentation = "https://docs.rs/ghfetch"
keywords = ["github", "cli", "terminal", "stats", "fetch"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
catppuccin = "2"
terminal_size = "0.4"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
